Add google analytics script

--- a/_config.yml
+++ b/_config.yml
@@ -175,7 +175,7 @@ analytics:
   ## Google Analytics
   google:
     tracking_id : "G-6H5WPV9WFH"
-    anonymize_ip: true # Anonymize IP tracking for Analytics
+    anonymize_ip: false # Anonymize IP tracking for Analytics
 
 
 ## => Build
