--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ mathjax: # false (default), true
 mathjax_autoNumber: # false (default), true
 
 ## Mermaid
-mermaid: # false (default), true
+mermaid: true
 
 ## Chart
 chart: # false (default), true
